--- a/other.html
+++ b/other.html
@@ -7,21 +7,21 @@
 	<body style="background-image: url('images/space.gif')">
 		<div class="sidenavL">
 			<img src="images/saturn.gif" width="200">
+			<div style="border:10px; border-style:outset; border-color:#ffff00; margin-top:44px; padding: 1em; background-color:purple;">
+				<table class="aligncenter" style="border:5px; border-style:outset; border-color:#808080; padding: 1em; background-color:yellow;">
+					<tr><td><a href="index.html"><img src="images/home2.gif" width="60"></a><br><br></td></tr>
+					<tr><td><a href="images.html"><img src="images/gallery.gif" width="80"></a><br><br></td></tr>
+					<tr><td><a href="sounds.html"><img src="images/audio.gif" width="60"></a><br><br></td></tr>
+					<tr><td><a href="other.html"><img src="images/other.gif" width="80"></a><br><br></td></tr>
+					<tr><td><a href="links.html"><img src="images/links.gif" width="60"></a><br><br></td></tr>
+				</table>
+			</div>
 		</div>
 		<div class="sidenavR">
 			<img src="images/saturn2.gif" width="200">
 		</div>
 		<div class="lowwidth" style="border:10px; border-style:outset; border-color:#ffff00; padding: 1em; background-color:purple;">
 			<h1 style="font-family:courier;" class="aligncenter"> TetrisKid's Official Website </h1>
-			<table class="aligncenter" style="border:5px; border-style:outset; border-color:#808080; padding: 1em; background-color:yellow;">
-				<tr>
-					<td><a href="index.html"><img src="images/home2.gif" width="60"></a></td>
-					<td><a href="images.html"><img src="images/gallery.gif" width="80"></a></td>
-					<td><a href="sounds.html"><img src="images/audio.gif" width="60"></a></td>
-					<td><a href="other.html"><img src="images/other.gif" width="80"></a></td>
-					<td><a href="links.html"><img src="images/links.gif" width="60"></a></td>
-				</tr>
-			</table>
 		</div>
 		<br>
 		<div class="lowwidth" style="border:10px; border-style:outset; border-color:#ffff00; padding: 1em; background-color:white;">
