New background color
New background color that's easier on the eyes.

--- a/images.html
+++ b/images.html
@@ -24,7 +24,7 @@
 			<h1 style="font-family:courier;" class="aligncenter"> TetrisKid's Official Website </h1>
 		</div>
 		<br>
-		<div class="lowwidth" style="border:10px; border-style:outset; border-color:#ffff00; padding: 1em; background-color:white;"> 
+		<div class="lowwidth" style="border:10px; border-style:outset; border-color:#ffff00; padding: 1em; background-color:#E6E6FA;"> 
 			<h2 class="aligncenter"><img src="images/gallery2.gif"></h2>
 			<p class="aligncenter">
 				<img src="images/javabean.png" alt="Hip to the Javabean Fanart" width="256" height="256">
