--- a/index.html
+++ b/index.html
@@ -24,27 +24,33 @@
 			<h1 style="font-family:courier;" class="aligncenter"> TetrisKid's Official Website </h1>
 		</div>
 		<br>
-		<div class="lowwidth" style="border:10px; border-style:outset; border-color:#ffff00; padding: 1em; background-color:white;"> 
+		<div class="lowwidth" style="border:10px; border-style:outset; border-color:#ffff00; padding: 1em; background-color:#E6E6FA;"> 
 			<h2 class="aligncenter"><img src="images/welcome.gif" width="15%"></h2>
-			<p class="aligncenter"> This is a website where you can find a lot of my stuff.</p>
-			<h1 font-family:courier; class="aligncenter">About Me</h1>
-			<p class="aligncenter">
-				I am THE TetrisKid, known for many things, things which I made on my computer.<br>I like video games such as "Deus Ex", "Doom 2", and "Fallout: New Vegas"<br>
-				I also like movies such as "Dawn Of The Dead (1978)" and "Scooby-Doo 2: Monsters Unleashed."<br> I also like bands such as "They Might Be Giants", "Talking Heads", and
-				"Lemon Demon."<br> Please explore the site! There might be easter eggs (there might not be also).<br><br><br>
-				Please check out my 2ND mashup album, "Crushed!" by clicking below.<br><br>
-				<a href="other/crushed.html"><img src="images/click.gif"></a><br><br><br>
-				
-				<img src="images/netscape.gif"><img src="images/internetexplorer.gif"><br>
-				<img src="images/usa.gif"><br>
-			</p>
-			<p class="aligncenter">
-				<img src="images/blinkiezone.gif"><br>
-				<img src="images/mobile.gif"><img src="images/good-vibes.gif"><img src="images/scoobydoo.gif">
-				<img src="images/blinkiemario.gif"><img src="images/jesusblinkie.gif"><img src="images/blinkiemyspace.gif">
-				<img src="images/blinkiepepsi.gif"><img src="images/spongebobsquarepants.gif"><img src="images/ethelsblinkie.gif">
-				<img src="images/vm_banner.gif"><img src="images/spindash_silence.gif"><img src="images/4-A18.gif">
-			</p>
+			<p class="aligncenter"> This is a website where you can find everything I make!</p>
+		</div>
+		<br>
+		<div class="lowwidth">
+			<div style="border:10px; border-style:outset; border-color:#ffff00; padding: 1em; background-color:#E6E6FA;">
+				<h1 font-family:courier; class="aligncenter">About Me</h1>
+				<p class="aligncenter">
+					I am THE TetrisKid, known for many things, things which I made on my computer.<br>I like video games such as "Deus Ex", "Doom 2", and "Fallout: New Vegas"<br>
+					I also like movies such as "Dawn Of The Dead (1978)" and "Scooby-Doo 2: Monsters Unleashed."<br> I also like bands such as "They Might Be Giants", "Talking Heads", and
+					"Lemon Demon."<br> Please explore the site! There might be easter eggs (there might not be also).<br><br><br>
+					Please check out my 2ND mashup album, "Crushed!" by clicking below.<br><br>
+					<a href="other/crushed.html"><img src="images/click.gif"></a><br><br><br>
+				</p>
+				<br>
+				<p class="aligncenter">
+					<img src="images/blinkiezone.gif"><br>
+					<img src="images/mobile.gif"><img src="images/good-vibes.gif"><img src="images/scoobydoo.gif">
+					<img src="images/blinkiemario.gif"><img src="images/jesusblinkie.gif"><img src="images/blinkiemyspace.gif">
+					<img src="images/blinkiepepsi.gif"><img src="images/spongebobsquarepants.gif"><img src="images/ethelsblinkie.gif">
+					<img src="images/vm_banner.gif"><img src="images/spindash_silence.gif"><img src="images/4-A18.gif">
+					<br><br>
+					<img src="images/netscape.gif"><img src="images/internetexplorer.gif"><br>
+					<img src="images/usa.gif"><br>
+				</p>
+			</div>
 		</div>
 	</body>
 </html>
