--- a/links.html
+++ b/links.html
@@ -24,7 +24,7 @@
 			<h1 style="font-family:courier;" class="aligncenter"> TetrisKid's Official Website </h1>
 		</div>
 		<br>
-		<div class="lowwidth" style="border:10px; border-style:outset; border-color:#ffff00; padding: 1em; background-color:white;">
+		<div class="lowwidth" style="border:10px; border-style:outset; border-color:#ffff00; padding: 1em; background-color:#E6E6FA;">
 			<h2 class="aligncenter"> I am everywhere! </h2>
 			<p class="aligncenter"> 
 				<a href="https://www.youtube.com/channel/UCqL-qPWP3AVjN5O7PY5hW8g" target="_blank">YouTube Channel<br><img src="images/youtube.gif" width="200"></a><br><br>
