--- a/sounds.html
+++ b/sounds.html
@@ -24,7 +24,7 @@
 			<h1 style="font-family:courier;" class="aligncenter"> TetrisKid's Official Website </h1>
 		</div>
 		<br>
-		<div class="lowwidth" style="border:10px; border-style:outset; border-color:#ffff00; padding: 1em; background-color:white;">
+		<div class="lowwidth" style="border:10px; border-style:outset; border-color:#ffff00; padding: 1em; background-color:#E6E6FA;">
 			<p class="aligncenter"><img src="images/listen-now.gif"></p>
 			<div class="aligncenter">
 				<h2 style="font-family:courier;">Click on one of the album arts below for more info on my 2 mashup albums, Scrambled and Crushed!</h2>
