--- a/other.html
+++ b/other.html
@@ -24,7 +24,7 @@
 			<h1 style="font-family:courier;" class="aligncenter"> TetrisKid's Official Website </h1>
 		</div>
 		<br>
-		<div class="lowwidth" style="border:10px; border-style:outset; border-color:#ffff00; padding: 1em; background-color:white;">
+		<div class="lowwidth" style="border:10px; border-style:outset; border-color:#ffff00; padding: 1em; background-color:#E6E6FA;">
 			<h2 class="aligncenter"><a href="other/setup.html">My PC Setup!!!</a> Components and stuff!!!!</h2>
 			<p class="aligncenter">
 				<a href="other/setup.html">This page</a> 
